Drobná úprava barev

--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -6,9 +6,9 @@ $c-teplarny-light-grey: #b4b4b4;
 $c-teplarny-uhli: #bb2719;
 $c-teplarny-ostatni: $c-teplarny-light-grey;
 
-$c-teplarny-done: #0085b6;
-$c-teplarny-in-progress: #ffbc5b;
-$c-teplarny-problematic: #bb2719;
+$c-teplarny-done: #1c7a96;
+$c-teplarny-in-progress: #ffcb6e;
+$c-teplarny-problematic: #c65163;
 $c-teplarny-problematic-bg: #fff1ef;
 
 #overall-charts {
