--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -11,7 +11,11 @@ $c-teplarny-in-progress: #ffcb6e;
 $c-teplarny-problematic: #c65163;
 $c-teplarny-problematic-bg: #fff1ef;
 
-#overall-charts {
+.perex {
+    margin-bottom: .5rem;
+}
+
+#simple-dashboard {
     display: grid;
 
     grid-template-columns: 1fr 1fr;
@@ -25,14 +29,10 @@ $c-teplarny-problematic-bg: #fff1ef;
         grid-column-gap: 1rem;
     }
 
-    #pct-households {
-        grid-column: 1/3;
+    h2 {
         grid-row: 1/2;
-        padding-bottom: 0;
-
-        h4 {
-            margin-bottom: 2rem;
-        }
+        grid-column: 1/3;
+        padding-bottom: 1rem;
     }
 
     #map {
@@ -78,13 +78,13 @@ $c-teplarny-problematic-bg: #fff1ef;
     }
 
     #subsidies-cards {
-        grid-column: 1 / 3;
+        grid-column: 2 / 3;
         grid-row: 4 / 5;
 
         // DESKTOP ADJUSTMENT
         @media (min-width: 992px) {
             grid-column: 2/3;
-            grid-row: 3/4;
+            grid-row: 2/4;
             justify-self: end;
         }
 
@@ -150,12 +150,17 @@ $c-teplarny-problematic-bg: #fff1ef;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: 1fr 1fr;
-    font-size: 1.1rem;
+    font-size: .9rem;
     line-height: 1.3;
+
+    padding-top: 1rem;
+    border-top: 1px solid $c-teplarny-light-grey;
+    padding-bottom: 1rem;
 
     p {
         grid-row: 1/2;
-        margin: 0;
+        text-transform: uppercase;
+        color: $c-teplarny-dark-grey;
     }
 
     .forms {
@@ -163,6 +168,7 @@ $c-teplarny-problematic-bg: #fff1ef;
         display: inline-flex;
         align-items: center;
         gap: 1rem;
+        font-size: 1.1rem;
     }
 
     label {
@@ -633,10 +639,6 @@ $c-teplarny-problematic-bg: #fff1ef;
         .card-body {
             padding-bottom: 0;
         }
-    }
-
-    #pct-households {
-        padding-bottom: 1rem;
     }
 
     .details-toggle {
