--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -330,7 +330,7 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
             .stats,
             .fuels,
             .subsidies {
-                grid-row: 1/5;
+                grid-row: 1/3;
             }
         }
     }
@@ -512,6 +512,9 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
     }
 
     .details-shown {
+        .card-body{
+            padding-bottom: 0rem;
+        }
         .detail {
             display: block;
         }
@@ -522,7 +525,6 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
 
         .notes {
             max-height: initial;
-            overflow: visible;
         }
 
         .notes::after {
