--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -79,7 +79,7 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
     }
 
     #subsidies-cards {
-        grid-column: 2 / 3;
+        grid-column: 1 / 3;
         grid-row: 4 / 5;
 
         // DESKTOP ADJUSTMENT
@@ -87,6 +87,7 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
             grid-column: 2/3;
             grid-row: 2/4;
             justify-self: end;
+            max-width: 35%;
         }
 
         h3 {
@@ -632,8 +633,7 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
 // MOBILE ADJUSTMENT
 @media (max-width: 991px) {
 
-    #status-cards,
-    #subsidies-cards {
+    #status-cards {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
