--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -38,6 +38,7 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
     #map {
         grid-column: 1/3;
         grid-row: 2/3;
+        z-index: 9;
 
         // DESKTOP ADJUSTMENT
         @media (min-width: 992px) {
