Ladenie mobilného zobrazenie kartt teplárne

--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -278,8 +278,12 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
         }
 
         .stats {
-            grid-column: 1/2;
-            grid-row: 4/5;
+            grid-column: 1 / 2;
+            grid-row: 4 / 5;
+        }
+
+        .fuels {
+            grid-row: 4 / 6;
         }
 
         .status-line {
