--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -60,8 +60,8 @@ $c-teplarny-ostatni: $c-teplarny-light-grey;
             fill: #3e3e4d;
 
             .facility-name {
-                font-size: 1rem;
-                font-weight: 600;
+                font-size: .9rem;
+                font-weight: 500;
             }
         }
     }
